--- a/angular.json
+++ b/angular.json
@@ -86,7 +86,11 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/chart.js/dist/chart.min.js"
+            ]
+
+
           }
         }
       }
