--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@angular/animations": "17.0.0",
     "@angular/common": "17.0.0",
     "@angular/compiler": "17.0.0",
-    "@angular/core": "17.0.0",
     "@angular/fire": "^17.0.0",
     "@angular/forms": "17.0.0",
     "@angular/platform-browser": "17.0.0",
@@ -21,18 +20,27 @@
     "@angular/router": "17.0.0",
     "chart.js": "^3.9.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "file-saver": "^2.0.5",
+    "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
     "ng2-charts": "^5.0.4",
+    "ng2-datepicker": "^12.0.0",
+    "ngx-papaparse": "^8.0.0",
+    "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "17.0.7",
-    "@angular/cli": "17.0.7",
+    "@angular/cli": "^17.0.7",
     "@angular/compiler-cli": "17.0.0",
+    "@angular/core": "^17.1.1",
     "@types/chart.js": "^2.9.41",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
+    "jasmine": "^5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
