--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     "ngx-papaparse": "^8.0.0",
     "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
+    "some-library": "^1.0.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.1.1",
-    "@angular/cli": "^17.1.1",
+    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "17.0.0",
-    "@angular/core": "^17.1.1",
+    "@angular/core": "^17.0.0",
     "@types/chart.js": "^2.9.41",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
