--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "node_modules/@types/jasmine/index.d.ts"
   ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
